test/fail/idannouniquefunction.app
//Function with name

application test

section datamodel

  entity User {
    name :: String (id)
  }

  function getUniqueUser(name:String){
  
  }